--- a/public/error.css
+++ b/public/error.css
@@ -114,7 +114,7 @@ html {
   --gradient-start: rgba(28, 28, 28, 0);
   --gradient-end: rgba(28, 28, 28, 0.9);
 
-  --color-bg: #1c1c1c;
+  --color-bg: #141414;
   --color-text: #fafafa;
   --color-link: #3b82f6;
   --blockquote-color: #94a3b8;
