--- a/app/globals.css
+++ b/app/globals.css
@@ -349,10 +349,11 @@ th {
 
 .nav-container {
   display: flex;
-  gap: 2.5rem;
+  gap: 2rem;
   font-size: var(--font-size-mobile);
   max-width: var(--max-width);
   width: 100%;
+  padding: 0 0.5rem;
 }
 
 .nav-item {
@@ -392,7 +393,7 @@ th {
   transform: translate(-50%);
   width: 100%;
   max-width: 650px;
-  padding: 0 20px;
+  padding: 0 2rem;
 }
 
 .about-content {
@@ -2080,11 +2081,13 @@ th {
   justify-content: center;
   border: 1px solid transparent;
   border-radius: 6px;
+  position: relative;
+  top: -2px;
 }
 
 .copy-icon {
-  width: 0.8rem;
-  height: 0.8rem;
+  width: 1rem;
+  height: 1rem;
   stroke: var(--code-color);
   opacity: 0.7;
 }
