--- a/app/globals.css
+++ b/app/globals.css
@@ -351,17 +351,18 @@ body {
   transform: translateX(-50%);
   border: 1px solid rgba(var(--color-text-rgb), 0.1);
   z-index: 1000;
-  padding: 0.75rem 1rem;
+  padding: 0.25rem 0.5rem;
   font-family: var(--font-normal);
   display: flex;
   justify-content: center;
   border-radius: 14px;
-  background: rgba(var(--color-bg-rgb), 0.9);
+  background: var(--code-background-color);
+  opacity: 0.95;
 }
 
 .nav-container {
   display: flex;
-  gap: 2rem;
+  gap: 1.5rem;
   font-size: var(--font-size-mobile);
   max-width: var(--max-width);
   width: 100%;
@@ -371,11 +372,12 @@ body {
 .nav-item {
   background: none;
   border: none;
-  padding: 0;
+  padding: 0.25rem;
   color: rgba(var(--color-text-rgb), 0.5);
   font-family: var(--font-normal);
   font-size: var(--font-size-mobile);
   cursor: pointer;
+  display: flex;
 }
 
 .nav-item.active {
@@ -383,13 +385,13 @@ body {
 }
 
 @media (max-width: 768px) {
-  .nav{
-    padding: 0.5rem 1rem;
+  .nav {
+    bottom: 1rem;
+    padding: 0.25rem 0.25rem;
   }
-  
+
   .nav-container {
-    gap: 1.5rem;
-    font-size: calc(var(--font-size-mobile) * 0.95);
+    gap: 1rem;
   }
 }
 
