--- a/app/globals.css
+++ b/app/globals.css
@@ -804,6 +804,7 @@ img {
   height: 100%;
   object-fit: cover;
   position: absolute;
+  transform: scale(1.01);
   top: 0;
   left: 0;
   transition: opacity 0.3s ease;
