--- a/app/globals.css
+++ b/app/globals.css
@@ -21,6 +21,10 @@
   --link-blue: #007FFF;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
@@ -34,6 +38,8 @@ body {
   max-width: var(--max-width);
   margin-left: auto;
   margin-right: auto;
+  min-height: 100vh;
+  overflow-x: hidden;
 }
 
 a {
