--- a/app/globals.css
+++ b/app/globals.css
@@ -144,11 +144,15 @@ section {
   background-color: rgba(255, 255, 255, 0.05);
 }
 
+[data-theme="solarized"] .prose figure[data-rehype-pretty-code-figure] {
+  background-color: #073642; 
+}
+
 .prose figure[data-rehype-pretty-code-figure] > pre {
   margin: 0;
   border-radius: 0;
   padding: 0.6rem 0.8rem; 
-  font-size: 0.9em; 
+  font-size: 0.8em; 
   line-height: 1.5; 
 }
 
@@ -159,15 +163,25 @@ section {
 .prose :where(code):not(:where(pre code)) {
   padding: 0.1em 0.3em; 
   margin: 0 0.1em;
-  font-size: 0.9em; 
+  font-size: 0.8em; 
   border-radius: 0.25rem; 
   background-color: rgba(0, 0, 0, 0.04);
   color: var(--foreground);
   white-space: nowrap;
+  font-family: inherit;
 }
 
 [data-theme="dark"] .prose :where(code):not(:where(pre code)) {
    background-color: rgba(255, 255, 255, 0.08);
+}
+
+.prose .table-wrapper {
+  overflow-x: auto;
+  &::-webkit-scrollbar {
+      display: none;
+  }
+  -ms-overflow-style: none; 
+  scrollbar-width: none; 
 }
 
 .prose table {
@@ -177,7 +191,7 @@ section {
   margin-top: 1em;
   margin-bottom: 1em;
   border-collapse: collapse;
-  font-size: 0.9em; 
+  font-size: inherit; 
   line-height: 1.4; 
 }
 
@@ -227,28 +241,44 @@ section {
 .prose ol {
   margin-top: 0.8em; 
   margin-bottom: 0.8em;
-  padding-left: 1.2em; 
-  list-style-position: outside; 
+  padding-left: 0; 
+  list-style-position: inside; 
 }
 
 .prose li {
   margin-top: 0.25em; 
   margin-bottom: 0.25em;
-  padding-left: 0.3em; 
+  padding-left: 1.5em; 
+  position: relative;
 }
 
 .prose ul li {
-  list-style-type: disc; 
+  list-style-type: none; 
+}
+.prose ul li::before {
+  content: '\2022'; 
+  color: var(--secondary);
+  position: absolute;
+  left: 0.5em;
+  top: 0;
 }
 
 .prose ol li {
-  list-style-type: decimal;
+  list-style-type: none; 
+  counter-increment: list-counter;
+}
+.prose ol li::before {
+  content: counter(list-counter) '.'; 
+  color: var(--secondary);
+  position: absolute;
+  left: 0.3em; 
+  top: 0;
+  font-variant-numeric: tabular-nums;
+}
+.prose ol {
+  counter-reset: list-counter;
 }
 
-.prose ul > li::marker,
-.prose ol > li::marker {
-  color: var(--secondary);
-}
 
 .prose img {
   display: block;
