--- a/app/globals.css
+++ b/app/globals.css
@@ -152,7 +152,6 @@ section {
   margin: 0;
   border-radius: 0;
   padding: 0.6rem 0.8rem; 
-  font-size: 0.8em; 
   line-height: 1.5; 
 }
 
@@ -160,10 +159,16 @@ section {
   display: grid;
 }
 
+.prose figure[data-rehype-pretty-code-figure] > pre code span {
+  font-size: 0.95em !important;
+  line-height: 1.4 !important;
+  color: var(--secondary) !important;
+}
+
 .prose :where(code):not(:where(pre code)) {
   padding: 0.1em 0.3em; 
   margin: 0 0.1em;
-  font-size: 0.8em; 
+  font-size: 0.95em;
   border-radius: 0.25rem; 
   background-color: rgba(0, 0, 0, 0.04);
   color: var(--foreground);
