--- a/app/globals.css
+++ b/app/globals.css
@@ -166,18 +166,24 @@ section {
 }
 
 .prose :where(code):not(:where(pre code)) {
-  padding: 0.1em 0.3em; 
+  padding: 0.15em 0.4em;
   margin: 0 0.1em;
-  font-size: 0.95em;
-  border-radius: 0.25rem; 
-  background-color: rgba(0, 0, 0, 0.04);
-  color: var(--foreground);
+  font-size: 0.9em;
+  border-radius: 0.375rem;
+  background-color: rgba(0, 0, 0, 0.03);
+  color: var(--secondary);
   white-space: nowrap;
   font-family: inherit;
 }
 
 [data-theme="dark"] .prose :where(code):not(:where(pre code)) {
-   background-color: rgba(255, 255, 255, 0.08);
+   background-color: rgba(255, 255, 255, 0.05);
+   color: var(--secondary);
+}
+
+[data-theme="solarized"] .prose :where(code):not(:where(pre code)) {
+  background-color: #073642;
+  color: var(--secondary);
 }
 
 .prose .table-wrapper {
@@ -253,8 +259,7 @@ section {
 .prose li {
   margin-top: 0.25em; 
   margin-bottom: 0.25em;
-  padding-left: 1.5em; 
-  position: relative;
+  padding-left: 0.25em; 
 }
 
 .prose ul li {
@@ -262,14 +267,11 @@ section {
 }
 
 .prose ul li::before {
-  content: '';
+  content: "-";
+  display: inline-block;
+  color: var(--secondary);
   position: absolute;
-  left: 0.5em;
-  top: 0.6em; 
-  width: 0.35em; 
-  height: 0.35em;
-  background-color: var(--secondary);
-  border-radius: 50%;
+  margin-left: -1em; 
 }
 
 .prose ol li {
@@ -279,14 +281,13 @@ section {
 
 .prose ol li::before {
   content: counter(list-counter) "."; 
-  position: absolute;
-  left: 0;
-  width: 1.5em; 
-  text-align: right; 
+  display: inline-block;
   color: var(--secondary);
   font-weight: 400;
-  font-size: 0.85em;
-  top: 0.05em; 
+  position: absolute;
+  margin-left: -1.5em; 
+  width: 1em;
+  text-align: right;
 }
 
 .prose ol {
@@ -294,23 +295,20 @@ section {
 }
 
 .prose img {
-  display: block; 
-  margin-top: 1em; 
+  display: block;
+  margin-top: 1em;
   margin-bottom: 1em;
+  max-width: 100%;
   border-radius: 0.375rem; 
-  max-width: 100%; 
-  height: auto; 
 }
 
 .prose a {
   color: var(--link-blue);
   text-decoration: none;
-  transition: opacity 0.2s ease-in-out;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 .prose a:hover {
-  opacity: 0.8;
   text-decoration: underline;
   text-underline-offset: 2px;
 }
@@ -321,9 +319,10 @@ section {
 .prose h4,
 .prose h5,
 .prose h6 {
-  margin-top: 1.2em;
-  margin-bottom: 0.6em;
-  line-height: 1.3;
+  font-weight: 600;
+  margin-top: 1.5em; 
+  margin-bottom: 0.5em;
+  line-height: 1.3; 
   color: var(--foreground);
 }
 
@@ -335,16 +334,15 @@ section {
 .prose h6 { font-weight: 600; color: var(--secondary); } 
 
 .prose p {
-  margin-top: 0.8em;
-  margin-bottom: 0.8em;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
 
 .prose hr {
+  border: none;
+  border-top: 1px solid var(--secondary);
   margin-top: 2em;
   margin-bottom: 2em;
-  border: 0;
-  border-top: 1px solid var(--secondary);
-  opacity: 0.3;
 }
 
 .text-link-blue { color: var(--link-blue); }
